# copenapi

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile.am  NOTICE  README.md  configure.ac  copenapi.pc.in  copenapi.spec  open_source_licenses.txt
cli/: Makefile.am  defines.h  help.c  includes.h  main.c  param.c  parseargs.c  parsecmdargs.c  prototypes.h  restclient.c  structs.h  utils.c
common/: Makefile.am  Makefile.in  configreader.c  defines.h  includes.h  memory.c  prototypes.h  strings.c  utils.c
examples/: README.md  print_api_def.c
include/: copenapi.h  copenapitypes.h
lib/: Makefile.am  api.c  defines.h  includes.h  jsonutils.c  prototypes.h  restapidef.c  utils.c
tests/: test.json
tools/: copenapi.spec
